--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <section class="page2">...</section>
     <section class="page3">...</section>
     <section class="page4">...</section>
+    <section class="form">...</section>
 
   </div>
 
