--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 		});
 
 	</script>
-   <!-- <script>
+   <script>
         new WOW().init();
-    </script> -->
+    </script>
 
 </head>
 
@@ -39,11 +39,17 @@
     <body>
 
   <div class="main">
-    <section class="page1">...</section>
-    <section class="page2">...</section>
-    <section class="page3">...</section>
-    <section class="page4">...</section>
-    <section class="form">...</section>
+    <section class="page1">
+    </section>
+    <section class="page2">
+
+    </section>
+    <section class="page3">
+    </section>
+    <section class="page4">
+    </section>
+    <section class="form">
+    </section>
 
   </div>
 
