start write presentation

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 
   <div class="main">
     <section class="page1">
+        <div class="col-md-5 col-lg-5 col-xs-6 col-sm-6 col-md-offset-1 col-lg-offset-1 portfolio">
+            <h1>Portfolio</h1>
+            <h1> Juliette Saint-Jalme</h1>
+        </div>
     </section>
     <section class="page2">
 
