add icon on onglet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="elements/css/animate.css">
     <link rel="stylesheet" href="elements/onepage-scroll/onepage-scroll.css">
     <link type="text/css" rel="stylesheet" href="elements/CSS/style.css" />
+    <link rel="icon" type="image/png" href="elements/img/J.jpeg" />
     <meta charset="UTF-8" author="Juliette Saint-Jalme">
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
