--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="elements/onepage-scroll/jquery.onepage-scroll.js"></script>
     <script src="elements/js/wow.min.js"></script>
+    <script src="elements/JS/hover.js"></script>
     <script>
 	  $(document).ready(function(){
       $(".main").onepage_scroll({
@@ -41,10 +42,10 @@
 
   <div class="main">
     <section class="page1">
-        <div class="col-md-5 col-lg-5 col-xs-6 col-sm-6 col-md-offset-1 col-lg-offset-1 portfolio">
-            <h1>Portfolio</h1>
-            <h1> Juliette Saint-Jalme</h1>
-        </div>
+    <div class="presentation col-md-12">
+        <p>Je m'appelle Juliette</p>
+    </div>
+    <div class="cadre4"></div>
     </section>
     <section class="page2">
 
@@ -52,6 +53,7 @@
     <section class="page3">
     </section>
     <section class="page4">
+
     </section>
     <section class="form">
     </section>
