finish effets hooveer et anciens_projets

--- a/index.html
+++ b/index.html
@@ -53,28 +53,48 @@
     <section class="page3">
     </section>
     <section class="page4">
-     <figure class="snip1401">
-  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample67.jpg" alt="sample67" />
+     <div class="col-md-12 mes_projets">
+
+     <figure class="exemple col-md-3">
+  <img src="elements/img/ancien_projets/fedala.png"/>
   <figcaption>
-    <h3>Eleanor Fant</h3>
-    <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+    <h3>SITE FEDALA</h3>
+    <p>Création de site d'un traiteur breton.</p>
   </figcaption><i class="ion-ios-home-outline"></i>
   <a href="#"></a>
 </figure>
-<figure class="snip1401"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample93.jpg" alt="sample93" />
+<figure class="exemple col-md-3"><img src="elements/img/ancien_projets/bootstrap.png" />
   <figcaption>
-    <h3>Eric Widget</h3>
-    <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>
+    <h3> BOOTSTRAP </h3>
+    <p>Ici j'ai recrée a partir d'une image un theme existant avec Bootstrap.</p>
   </figcaption><i class="ion-ios-personadd-outline"></i>
   <a href="#"></a>
 </figure>
-<figure class="snip1401"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg" alt="sample87" />
+<figure class="exemple col-md-3"><img src="elements/img/ancien_projets/1.png" />
   <figcaption>
-    <h3>Will Barrow</h3>
-    <p>The only skills I have the patience to learn are those that have no real application in life. </p>
+    <h3>QUIZZ</h3>
+    <p>Création d'un quizz en Vanilla JavaScript, de dix questions avec compteur de reponses. </p>
   </figcaption><i class="ion-ios-location-outline"></i>
   <a href="#"></a>
 </figure>
+  <figure class="exemple col-md-3"><img src="elements/img/ancien_projets/pastime.png"  />
+  <figcaption>
+    <h3>THEME</h3>
+    <p>Reproduction du theme Pastime à partir de maquette. </p>
+  </figcaption><i class="ion-ios-location-outline"></i>
+  <a href="#"></a>
+</figure>
+  <figure class="exemple col-md-3"><img src="elements/img/ancien_projets/sitepromo.png"  />
+  <figcaption>
+    <h3>SITE</h3>
+    <p>J'ai participé à la création du site Web de la Code Academie. </p>
+  </figcaption><i class="ion-ios-location-outline"></i>
+  <a href="#"></a>
+</figure>
+
+<div class="description_projet col-md-3 col-md-offset-1"><p> Ici sont presenté des exemples de réalisation accomplies, pour la plupart dans le cadre de ma formation.</p></div>
+</div>
+
     </section>
     <section class="form">
     </section>
