parcours page 2 add

--- a/index.html
+++ b/index.html
@@ -42,14 +42,41 @@
 
   <div class="main">
     <section class="page1">
+
     <div class="presentation col-md-12">
         <p>Je m'appelle Juliette</p>
     </div>
     <div class="cadre4"></div>
     </section>
+
+    <!--page 2 -->
     <section class="page2">
+       <div class="col-md-12 col-lg-12 col-xs-12 col-sm-12 mon_parcours">
+        <div class= " col-md-5 col-xs-5 col-lg-5"><h2> Comment suis-je Devenue Developpeuse ?</h2></div>
+        <div class="col-md-offset-4 col-md-3 col-sm-3 col-xs-3 col-lg-3">
+        <a href="https://fr.linkedin.com/in/juliette-saint-jalme-339248122"><i class="icone fa fa-linkedin" aria-hidden="true"></i>
+        &nbsp;linkedin</a>
+        <a href="elements/StJalme_Juliette_CV/cv.html"><i class="icone fa fa-graduation-cap"
+        aria-hidden="true"></i>
+        &nbsp;curriculum vitae</a>
+
+        </div>
+        </div>
+
+        <div class="bac col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Baccalaureat </br> Litterature </br>Spécialité Mathematiques</br> 2011</p></div>
+        <div class="licence col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Licence Lettres Modernes </br> Rennes 2 </br> 2012 - 2015</p></div>
+        <div class="Serveuse col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Serveuse </br> Restaurant les Algues </br>Locquirec </br> 2013 - 2014</p></div>
+        <div class="CodeAc col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Code Academie </br> Face Simplon </br> 2016 - 2017</p></div>
+        <div class=" col-md-offset-1 col-md-10 col-lg-10 col-sm-10 col-xs-10 LaCodAc">
+           <h3 class="text-center">La Code Académie </h3>
+
+            <p>Ma formation est spécialement tournée vers les travaux pratiques avec de nombreux projets professionnels réalisés.</br> C'est cela qui m'a incité a y participer, la théorie alliée a la pratique m'ont permis de progresser tres rapidement et d'acquerir de réelles competences. </br>
+      Axée sur le travail en équipe avec la méthode Agile, notamment en mode SCRUM. elle m'a permit d'apprendre le développement collaboratif avec la maîtrise d'outils tel que Git/Github.</br> De nombreuses interventions d'acteurs du secteur numérique sur le bassin rennais, sont au programme pour échanger mais aussi acquerir une vision plus global de l'activité numérique à Rennes.</p>
+        </div>
 
     </section>
+
+    <!-- Page 3 -->
     <section class="page3">
     </section>
     <section class="page4">
