--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="bac col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Baccalaureat </br> Litterature </br>Spécialité Mathematiques</br> 2011</p></div>
-        <div class="licence col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Licence Lettres Modernes </br> Rennes 2 </br> 2012 - 2015</p></div>
+        <div class="licence col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Licence Lettres Modernes </br> Rennes 2 </br> Science du language</br> 2012 - 2015</p></div>
         <div class="Serveuse col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Serveuse </br> Restaurant les Algues </br>Locquirec </br> 2013 - 2014</p></div>
         <div class="CodeAc col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Code Academie </br> Face Simplon </br> 2016 - 2017</p></div>
         <div class=" col-md-offset-1 col-md-10 col-lg-10 col-sm-10 col-xs-10 LaCodAc">
