--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <body>
 
   <div class="main">
-    <section class="page1">
+    <section class="page1 ">
 
     <div class="presentation col-md-12">
         <p>Je m'appelle Juliette</p>
@@ -50,7 +50,7 @@
     </section>
 
     <!--page 2 -->
-    <section class="page2">
+    <section class="page2 ">
        <div class="col-md-12 col-lg-12 col-xs-12 col-sm-12 mon_parcours">
         <div class= " col-md-5 col-xs-5 col-lg-5"><h2> Comment suis-je Devenue Developpeuse ?</h2></div>
         <div class="col-md-offset-4 col-md-3 col-sm-3 col-xs-3 col-lg-3">
@@ -62,27 +62,38 @@
 
         </div>
         </div>
-
-        <div class="bac col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Baccalaureat </br> Litterature </br>Spécialité Mathematiques</br> 2011</p></div>
+        <div class="row">
+        <div class="bac col-md-offset-1 col-md-2 col-xs-2 col-lg-2 col-sm-2"><p> Baccalaureat </br> Litterature </br>Spécialité Mathematiques</br> 2011</p></div>
         <div class="licence col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Licence Lettres Modernes </br> Rennes 2 </br> Science du language</br> 2012 - 2015</p></div>
         <div class="Serveuse col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Serveuse </br> Restaurant les Algues </br>Locquirec </br> 2013 - 2014</p></div>
         <div class="CodeAc col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Code Academie </br> Face Simplon </br> 2016 - 2017</p></div>
+        </div>
+        <div class="row">
         <div class=" col-md-offset-1 col-md-10 col-lg-10 col-sm-10 col-xs-10 LaCodAc">
            <h3 class="text-center">La Code Académie </h3>
 
             <p>Ma formation est spécialement tournée vers les travaux pratiques avec de nombreux projets professionnels réalisés.</br> C'est cela qui m'a incité a y participer, la théorie alliée a la pratique m'ont permis de progresser tres rapidement et d'acquerir de réelles competences. </br>
       Axée sur le travail en équipe avec la méthode Agile, notamment en mode SCRUM. elle m'a permit d'apprendre le développement collaboratif avec la maîtrise d'outils tel que Git/Github.</br> De nombreuses interventions d'acteurs du secteur numérique sur le bassin rennais, sont au programme pour échanger mais aussi acquerir une vision plus global de l'activité numérique à Rennes.</p>
         </div>
-
+    </div>
     </section>
 
     <!-- Page 3 -->
+
+
     <section class="page3">
+
+
+
     </section>
+
+
+
+    <!-- Page 4 -->
     <section class="page4">
      <div class="col-md-12 mes_projets">
 
-     <figure class="exemple col-md-3">
+     <figure class="exemple col-md-3 col-lg-3 col-sm-3 col-xs-3">
   <img src="elements/img/ancien_projets/fedala.png"/>
   <figcaption>
     <h3>SITE FEDALA</h3>
@@ -90,28 +101,28 @@
   </figcaption><i class="ion-ios-home-outline"></i>
   <a href="#"></a>
 </figure>
-<figure class="exemple col-md-3"><img src="elements/img/ancien_projets/bootstrap.png" />
+<figure class="exemple col-md-3 col-lg-3 col-sm-3 col-xs-3"><img src="elements/img/ancien_projets/bootstrap.png" />
   <figcaption>
     <h3> BOOTSTRAP </h3>
     <p>Ici j'ai recrée a partir d'une image un theme existant avec Bootstrap.</p>
   </figcaption><i class="ion-ios-personadd-outline"></i>
   <a href="#"></a>
 </figure>
-<figure class="exemple col-md-3"><img src="elements/img/ancien_projets/1.png" />
+<figure class="exemple col-md-3 col-lg-3 col-sm-3 col-xs-3"><img src="elements/img/ancien_projets/1.png" />
   <figcaption>
     <h3>QUIZZ</h3>
     <p>Création d'un quizz en Vanilla JavaScript, de dix questions avec compteur de reponses. </p>
   </figcaption><i class="ion-ios-location-outline"></i>
   <a href="#"></a>
 </figure>
-  <figure class="exemple col-md-3"><img src="elements/img/ancien_projets/pastime.png"  />
+  <figure class="exemple col-md-3 col-lg-3 col-sm-3 col-xs-3"><img src="elements/img/ancien_projets/pastime.png"  />
   <figcaption>
     <h3>THEME</h3>
     <p>Reproduction du theme Pastime à partir de maquette. </p>
   </figcaption><i class="ion-ios-location-outline"></i>
   <a href="#"></a>
 </figure>
-  <figure class="exemple col-md-3"><img src="elements/img/ancien_projets/sitepromo.png"  />
+  <figure class="exemple col-md-3 col-lg-3 col-sm-3 col-xs-3"><img src="elements/img/ancien_projets/sitepromo.png"  />
   <figcaption>
     <h3>SITE</h3>
     <p>J'ai participé à la création du site Web de la Code Academie. </p>
