--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link href="elements/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" />
     <link href="elements/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="elements/css/animate.css">
+    <link rel="stylesheet" href="elements/CSS/animate.css">
     <link rel="stylesheet" href="elements/onepage-scroll/onepage-scroll.css">
     <link type="text/css" rel="stylesheet" href="elements/CSS/style.css" />
     <link rel="icon" type="image/png" href="elements/img/J.jpeg" />
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="elements/onepage-scroll/jquery.onepage-scroll.js"></script>
-    <script src="elements/js/wow.min.js"></script>
+    <script src="elements/JS/wow.min.js"></script>
     <script src="elements/JS/hover.js"></script>
     <script>
 	  $(document).ready(function(){
@@ -31,9 +31,6 @@
 		});
 
 	</script>
-   <script>
-        new WOW().init();
-    </script>
 
 </head>
 
@@ -82,7 +79,9 @@
 
 
     <section class="page3">
+    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
 
+    </div>
 
 
     </section>
