--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <link href="elements/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" />
     <link href="elements/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="elements/CSS/animate.css">
     <link rel="stylesheet" href="elements/onepage-scroll/onepage-scroll.css">
     <link type="text/css" rel="stylesheet" href="elements/CSS/style.css" />
     <link rel="icon" type="image/png" href="elements/img/J.jpeg" />
@@ -13,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="elements/onepage-scroll/jquery.onepage-scroll.js"></script>
-    <script src="elements/JS/wow.min.js"></script>
+   <script src="elements/JS/skill.js"></script>
     <script src="elements/JS/hover.js"></script>
     <script>
 	  $(document).ready(function(){
@@ -78,10 +77,47 @@
     <!-- Page 3 -->
 
 
-    <section class="page3">
-    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
+  <section class="page3">
+<div class="col-md-6 col-sm-6 col-xs-6 col-lg-6">
+    <div class="skills">
+        <h3 class="skillsTop">HTML5/CSS3</h3>
 
+        <div class="skillsBottom">
+            <div class="progress">
+                <div class="html progress-bar progress-bar-info" role="progressbar">
+                </div>
+            </div>
+        </div>
+
+        <h3 class="skillsTop">PHP</h3>
+
+        <div class="skillsBottom">
+            <div class="progress">
+                <div class="css progress-bar progress-bar-info" role="progressbar">
+                </div>
+            </div>
+        </div>
+
+        <h3 class="skillsTop">JavaScript</h3>
+
+        <div class="skillsBottom">
+            <div class="progress">
+                <div class="javascript progress-bar progress-bar-info" role="progressbar">
+                </div>
+            </div>
+        </div>
+
+
+        <h3 class="skillsTop">Ruby</h3>
+
+        <div class="skillsBottom">
+            <div class="progress">
+                <div class="wordpress progress-bar progress-bar-info" role="progressbar">
+                </div>
+            </div>
+        </div>
     </div>
+
 
 
     </section>
@@ -137,6 +173,7 @@
 
 
     <section class="form">
+
     </section>
 
   </div>
