--- a/index.html
+++ b/index.html
@@ -117,6 +117,68 @@
             </div>
         </div>
     </div>
+      </div>
+    <div class="col-md-5 col-sm-5 col-xs-5 col-lg-5">
+     <div class="progress2">
+
+  <div class="progress2-radial progress2-80 setsize">
+    <div class="overlay setsize">
+      <p>Jquery</p>
+    </div>
+  </div>
+
+  <div class="progress2-radial progress2-55 setsize">
+    <div class="overlay setsize">
+      <p>Wordpress</p>
+    </div>
+  </div>
+
+  <div class="progress2-radial progress2-35 setsize">
+    <div class="overlay setsize">
+      <p>LESS</p>
+    </div>
+  </div>
+
+  <div class="progress2-radial progress2-90 setsize">
+    <div class="overlay setsize">
+      <p>Symfony</p>
+    </div>
+  </div>
+
+
+  <div class="clear"></div>
+</div>
+    <div class="progress2">
+
+  <div class="progress2-radial progress2-90 setsize">
+    <div class="overlay setsize">
+      <p>Bootstrap</p>
+    </div>
+  </div>
+
+  <div class="progress2-radial progress2-40 setsize">
+    <div class="overlay setsize">
+      <p>Behat</p>
+    </div>
+  </div>
+
+  <div class="progress2-radial progress2-35 setsize">
+    <div class="overlay setsize">
+      <p>LESS</p>
+    </div>
+  </div>
+
+  <div class="progress2-radial progress2-90 setsize">
+    <div class="overlay setsize">
+      <p>Symfony</p>
+    </div>
+  </div>
+
+
+  <div class="clear"></div>
+</div>
+    </div>
+
 
 
 
