added other framework

--- a/index.html
+++ b/index.html
@@ -162,15 +162,15 @@
     </div>
   </div>
 
-  <div class="progress2-radial progress2-35 setsize">
+  <div class="progress2-radial progress2-45 setsize">
     <div class="overlay setsize">
-      <p>LESS</p>
+      <p>Ruby on Rails</p>
     </div>
   </div>
 
-  <div class="progress2-radial progress2-90 setsize">
+  <div class="progress2-radial progress2-20 setsize">
     <div class="overlay setsize">
-      <p>Symfony</p>
+      <p>Phaser</p>
     </div>
   </div>
 
