--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
     </div>
   </div>
 
-  <div class="progress2-radial progress2-45 setsize">
+  <div class="progress2-radial progress2-80 setsize">
     <div class="overlay setsize">
-      <p>Ruby on Rails</p>
+      <p>MySQl</p>
     </div>
   </div>
 
