begin presentation page

--- a/index.html
+++ b/index.html
@@ -40,9 +40,54 @@
     <section class="page1 ">
 
     <div class="presentation col-md-12">
-        <p>Je m'appelle Juliette</p>
+         <div class="container">
+  <h1>Portfolio </h1>
+  <h1>Juliette Saint-Jalme</h1>
+  <div class="block">
+    <div class="p-container">
+      <p class="img-p">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga, vero ea enim. Nemo voluptas culpa temporibus eius quae sunt.
+      </p>
     </div>
-    <div class="cadre4"></div>
+  </div>
+  <!-- block -->
+
+  <div class="block">
+    <div class="p-container">
+      <p class="img-p">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga, vero ea enim. Nemo voluptas culpa temporibus eius quae sunt.
+      </p>
+    </div>
+  </div>
+  <!-- block -->
+
+  <div class="block">
+    <div class="p-container">
+      <p class="img-p">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga, vero ea enim. Nemo voluptas culpa temporibus eius quae sunt.
+      </p>
+    </div>
+  </div>
+  <!-- block -->
+
+  <div class="block">
+    <div class="p-container">
+      <p class="img-p">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga, vero ea enim. Nemo voluptas culpa temporibus eius quae sunt.
+      </p>
+    </div>
+  </div>
+  <!-- block -->
+
+  <div class="block">
+    <div class="p-container">
+      <p class="img-p">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga, vero ea enim. Nemo voluptas culpa temporibus eius quae sunt.
+      </p>
+    </div>
+  </div>
+    </div>
+
     </section>
 
     <!--page 2 -->
@@ -78,7 +123,7 @@
 
 
   <section class="page3">
-<div class="col-md-6 col-sm-6 col-xs-6 col-lg-6">
+<div class="col-md-5 col-sm-5 col-xs-5 col-lg-5">
     <div class="skills">
         <h3 class="skillsTop">HTML5/CSS3</h3>
 
@@ -176,6 +221,14 @@
 
 
   <div class="clear"></div>
+
+
+
+
+
+
+
+
 </div>
     </div>
 
