first block text

--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
 
     <div class="presentation col-md-12">
          <div class="container">
-  <h1>Portfolio </h1>
+         <h1>Bienvenue sur le</h1>
+  <h1>Portfolio de</h1>
   <h1>Juliette Saint-Jalme</h1>
   <div class="block">
     <div class="p-container">
       <p class="img-p">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga, vero ea enim. Nemo voluptas culpa temporibus eius quae sunt.
+       Je m'appelle Juliette, j'ai 23 ans.<br>
+       Je suis actuellement en formation pour devenir developpeuse web.
+       J'aime beaucoup le travail collaboratif et j'ai de fortes capacités d'apprentissage.
       </p>
     </div>
   </div>
