welcome page finish !

--- a/index.html
+++ b/index.html
@@ -41,54 +41,50 @@
 
     <div class="presentation col-md-12">
          <div class="container">
-         <h1>Bienvenue sur le</h1>
   <h1>Portfolio de</h1>
   <h1>Juliette Saint-Jalme</h1>
   <div class="block">
+    <div class="icone1">
     <div class="p-container">
       <p class="img-p">
        Je m'appelle Juliette, j'ai 23 ans.<br>
-       Je suis actuellement en formation pour devenir developpeuse web.
-       J'aime beaucoup le travail collaboratif et j'ai de fortes capacités d'apprentissage.
+       Je suis actuellement en formation pour devenir developpeuse web.<br>
+       J'aime beaucoup le travail collaboratif et j'ai de fortes capacités d'apprentissage.<br>
+       Pendant mon temps libre, j'aime jouer aux jeux video<br>
+       J'aime aussi le tennis et la lutte bretonne.
       </p>
+    </div>
     </div>
   </div>
   <!-- block -->
 
-  <div class="block">
+   <div class="block">
+   <div class="icone2">
     <div class="p-container">
       <p class="img-p">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga, vero ea enim. Nemo voluptas culpa temporibus eius quae sunt.
+        Je suis specialisée dans le developpement Back-End <br>
+        J'aime l'algorithmie et la logique <br>
+        J'ai toujours été attirée par la résolution de problemes <br>
+        Je me spécialise actuellement sur le framework Symfony 2 <br>
       </p>
     </div>
   </div>
+             </div>
   <!-- block -->
 
   <div class="block">
+   <div class="icone3">
     <div class="p-container">
+
       <p class="img-p">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga, vero ea enim. Nemo voluptas culpa temporibus eius quae sunt.
+        Pour obtenir plus de détails concernant mes compétences et me concernant, je vous invite à jeter un oeil à mon <a class="a" href='./elements/StJalme_Juliette_CV/cv.html'>CV</a><br>
+        Ou a me contacter : Juliette@saint-jalme.fr <br>
       </p>
     </div>
   </div>
+             </div>
   <!-- block -->
 
-  <div class="block">
-    <div class="p-container">
-      <p class="img-p">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga, vero ea enim. Nemo voluptas culpa temporibus eius quae sunt.
-      </p>
-    </div>
-  </div>
-  <!-- block -->
-
-  <div class="block">
-    <div class="p-container">
-      <p class="img-p">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fuga, vero ea enim. Nemo voluptas culpa temporibus eius quae sunt.
-      </p>
-    </div>
-  </div>
     </div>
 
     </section>
