--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
     </div>
   </div>
              </div>
+             <div class="col-md-12 clear"></div>
   <!-- block -->
-
+        </div>
     </div>
 
     </section>
