--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="elements/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" />
     <link href="elements/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="elements/onepage-scroll/onepage-scroll.css">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="elements/CSS/style.css" />
     <link rel="icon" type="image/png" href="elements/img/J.jpeg" />
     <meta charset="UTF-8" author="Juliette Saint-Jalme">
@@ -103,15 +104,16 @@
 
         </div>
         </div>
-        <div class="row">
-        <div class="bac col-md-offset-1 col-md-2 col-xs-2 col-lg-2 col-sm-2"><p> Baccalaureat </br> Litterature </br>Spécialité Mathematiques</br> 2011</p></div>
-        <div class="licence col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Licence Lettres Modernes </br> Rennes 2 </br> Science du language</br> 2012 - 2015</p></div>
-        <div class="Serveuse col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Serveuse </br> Restaurant les Algues </br>Locquirec </br> 2013 - 2014</p></div>
-        <div class="CodeAc col-md-3 col-xs-3 col-lg-3 col-sm-3"><p> Code Academie </br> Face Simplon </br> 2016 - 2017</p></div>
+        <div class="row chrono">
+        <div class="col-md-2 date text-center"><img src="elements/img/graduation.png"><p> Baccalaureat </br> Litterature </br> 2011</p></div>
+        <div class="col-md-2 date text-center"><img src="elements/img/book.png"><p><p> Licence Lettres Modernes </br> 2012 - 2015</p></div>
+        <div class="col-md-2 date text-center"><img src="elements/img/people.png"><p> Serveuse </br>  2013 - 2014</p></div>
+        <div class="col-md-2 date text-center"><img src="elements/img/video-chat.png"><p> Hotesse de caisse </br>2014 -2015</p></div>
+        <div class="col-md-2 date text-center"><img src="elements/img/computer.png"><p> Code Academie </br> Face Simplon </br> 2016 - 2017</p></div>
+
         </div>
         <div class="row">
         <div class=" col-md-offset-1 col-md-10 col-lg-10 col-sm-10 col-xs-10 LaCodAc">
-           <h3 class="text-center">La Code Académie </h3>
 
             <p>Ma formation est spécialement tournée vers les travaux pratiques avec de nombreux projets professionnels réalisés.</br> C'est cela qui m'a incité a y participer, la théorie alliée a la pratique m'ont permis de progresser tres rapidement et d'acquerir de réelles competences. </br>
       Axée sur le travail en équipe avec la méthode Agile, notamment en mode SCRUM. elle m'a permit d'apprendre le développement collaboratif avec la maîtrise d'outils tel que Git/Github.</br> De nombreuses interventions d'acteurs du secteur numérique sur le bassin rennais, sont au programme pour échanger mais aussi acquerir une vision plus global de l'activité numérique à Rennes.</p>
