--- a/index.html
+++ b/index.html
@@ -125,14 +125,38 @@
 
 
   <section class="page3">
-<div class="col-md-5 col-sm-5 col-xs-5 col-lg-5">
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
+</div>
+
+<div id="main">
+  <h2>Sidenav Push Example</h2>
+  <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+</div>
+
+<script>
+function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+    document.getElementById("main").style.marginLeft = "250px";
+}
+
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+    document.getElementById("main").style.marginLeft= "0";
+}
+</script>
+
+<!--<div id="main">
     <div class="skills">
-
+       <div class="dot text-center"><p>PHP</p></div>
     </div>
-      </div>
-    <div class="col-md-5 col-sm-5 col-xs-5 col-lg-5">
+      </div>-->
 
-    </div>
 
 
 
