--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="elements/onepage-scroll/jquery.onepage-scroll.js"></script>
    <script src="elements/JS/skill.js"></script>
     <script src="elements/JS/hover.js"></script>
+
     <script>
 	  $(document).ready(function(){
       $(".main").onepage_scroll({
@@ -125,42 +126,31 @@
 
 
   <section class="page3">
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopad">
+<div class="explication">
+<ul>
+    <li><p>JS</p></li>
+    <li><p>PHP</p></li>
+    <li><p>Ruby</p></li>
+    <li><p>HTML5</p></li>
+    <li><p>CSS3</p></li>
+    <li><p>Git</p></li>
+    <li><p>Jquery</p></li>
+    <li><p>Symfony</p></li>
+    <li><p>Bootstrap</p></li>
+    <li><p>Wordpress</p></li>
+    <li><p>MySQL</p></li>
+    <li><p>Behat</p></li>
+    <li><p>GitHub</p></li>
+    <li><p>Less</p></li>
+</ul>
 </div>
 
-<div id="main">
-  <h2>Sidenav Push Example</h2>
-  <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+
+
+
+
 </div>
-
-<script>
-function openNav() {
-    document.getElementById("mySidenav").style.width = "250px";
-    document.getElementById("main").style.marginLeft = "250px";
-}
-
-function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
-    document.getElementById("main").style.marginLeft= "0";
-}
-</script>
-
-<!--<div id="main">
-    <div class="skills">
-       <div class="dot text-center"><p>PHP</p></div>
-    </div>
-      </div>-->
-
-
-
-
-
     </section>
 
 
