begin the bubbleskill

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="elements/onepage-scroll/onepage-scroll.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="elements/CSS/style.css" />
+    <link type="text/css" rel="stylesheet" href="elements/CSS/bubble.css" />
     <link rel="icon" type="image/png" href="elements/img/J.jpeg" />
     <meta charset="UTF-8" author="Juliette Saint-Jalme">
     <title>Portfolio</title>
@@ -126,9 +127,10 @@
 
 
   <section class="page3">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopad">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopad">
+<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 nopad">
 <div class="explication">
-<ul>
+<ul> <h4>Mes competences :</h4>
     <li><p>JS</p></li>
     <li><p>PHP</p></li>
     <li><p>Ruby</p></li>
@@ -145,12 +147,26 @@
     <li><p>Less</p></li>
 </ul>
 </div>
-
-
-
-
+</div>
+<div class=" col-offset-lg-2 col-lg-8 col-md-8 col-sm-8 cl-xs-8 cercle">
+<div class="circle JS bubble">
+    <p>JS</p>
+</div>
+<div class="circle PHP bubble_un">
+    <p>PHP</p>
+</div>
+<div class="circle Ruby bubble_deux">
+    <p>Ruby</p>
+</div>
+<div class="circle HTML bubble_trois">
+    <p>HTML5</p>
+</div>
 
 </div>
+
+
+
+      </div>
     </section>
 
 
