anim bubble rework

--- a/index.html
+++ b/index.html
@@ -127,47 +127,43 @@
 
 
   <section class="page3">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopad">
-<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 nopad">
-<div class="explication">
-<ul> <h4>Mes competences :</h4>
-    <li><p>JS</p></li>
-    <li><p>PHP</p></li>
-    <li><p>Ruby</p></li>
-    <li><p>HTML5</p></li>
-    <li><p>CSS3</p></li>
-    <li><p>Git</p></li>
-    <li><p>Jquery</p></li>
-    <li><p>Symfony</p></li>
-    <li><p>Bootstrap</p></li>
-    <li><p>Wordpress</p></li>
-    <li><p>MySQL</p></li>
-    <li><p>Behat</p></li>
-    <li><p>GitHub</p></li>
-    <li><p>Less</p></li>
-</ul>
+  <div class="flexbox">
+    <div class="explication">
+        <ul> <h4>Mes competences :</h4>
+            <li><p>JS</p></li>
+            <li><p>PHP</p></li>
+            <li><p>Ruby</p></li>
+            <li><p>HTML5</p></li>
+            <li><p>CSS3</p></li>
+            <li><p>Git</p></li>
+            <li><p>Jquery</p></li>
+            <li><p>Symfony</p></li>
+            <li><p>Bootstrap</p></li>
+            <li><p>Wordpress</p></li>
+            <li><p>MySQL</p></li>
+            <li><p>Behat</p></li>
+            <li><p>GitHub</p></li>
+            <li><p>Less</p></li>
+        </ul>
+    </div>
+    <div class="cercle">
+        <div class="JS circle bubble">JS</div>
+        <div class="PHP circle bubble_un">PHP</div>
+        <div class="Ruby circle bubble_deux">Ruby</div>
+        <div class="HTML circle bubble_tois">HTML5</div>
+        <div class="CSS circle">CSS3</div>
+        <div class="Git circle">Git</div>
+        <div class="JQuery circle">JQuery</div>
+        <div class="Symfony circle">Symfony</div>
+        <div class="Bootstrap circle">Bootstrap</div>
+        <div class="Wordpress circle">Wordpress</div>
+        <div class="MySQL circle">MySQL</div>
+         <div class="Behat circle">Behat</div>
+        <div class="Github circle">Github</div>
+         <div class="Less circle">Less</div>
+    </div>
 </div>
-</div>
-<div class=" col-offset-lg-2 col-lg-8 col-md-8 col-sm-8 cl-xs-8 cercle">
-<div class="circle JS bubble">
-    <p>JS</p>
-</div>
-<div class="circle PHP bubble_un">
-    <p>PHP</p>
-</div>
-<div class="circle Ruby bubble_deux">
-    <p>Ruby</p>
-</div>
-<div class="circle HTML bubble_trois">
-    <p>HTML5</p>
-</div>
-
-</div>
-
-
-
-      </div>
-    </section>
+</section>
 
 
 
