end of bubble effect

--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
         <div class="JS circle bubble">JS</div>
         <div class="PHP circle bubble_un">PHP</div>
         <div class="Ruby circle bubble_deux">Ruby</div>
-        <div class="HTML circle bubble_tois">HTML5</div>
-        <div class="CSS circle">CSS3</div>
-        <div class="Git circle">Git</div>
-        <div class="JQuery circle">JQuery</div>
-        <div class="Symfony circle">Symfony</div>
-        <div class="Bootstrap circle">Bootstrap</div>
-        <div class="Wordpress circle">Wordpress</div>
-        <div class="MySQL circle">MySQL</div>
-         <div class="Behat circle">Behat</div>
-        <div class="Github circle">Github</div>
+        <div class="HTML circle bubble_trois">HTML5</div>
+        <div class="CSS circle bubble_quatre">CSS3</div>
+        <div class="Git circle bubble_cinq">Git</div>
+        <div class="JQuery circle bubble_six">JQuery</div>
+        <div class="Symfony circle bubble_sept">Symfony</div>
+        <div class="Bootstrap circle bubble_huit">Bootstrap</div>
+        <div class="Wordpress circle bubble_neuf">Wordpress</div>
+        <div class="MySQL circle bubble_dix">MySQL</div>
+         <div class="Behat circle bubble_eleven">Behat</div>
+        <div class="Github circle bubble_twelve">Github</div>
          <div class="Less circle">Less</div>
     </div>
 </div>
