agar over/finish/done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="elements/onepage-scroll/jquery.onepage-scroll.js"></script>
-
+<script src="elements/JS/agario.js"></script>
    <script src="elements/JS/skill.js"></script>
     <script src="elements/JS/hover.js"></script>
 
@@ -150,23 +150,24 @@
 
 <div class="cercle">
 
+<div class="limite">
 
-
-        <div class="JS circle bubble">JS</div>
-        <div class="PHP circle bubble_un">PHP</div>
-        <div class="Ruby circle bubble_deux">Ruby</div>
-        <div class="HTML circle bubble_trois">HTML5</div>
-        <div class="CSS circle bubble_quatre">CSS3</div>
-        <div class="Git circle bubble_cinq">Git</div>
-        <div class="JQuery circle bubble_six">JQuery</div>
-        <div class="Symfony circle bubble_sept">Symfony</div>
-        <div class="Bootstrap circle bubble_huit">Bootstrap</div>
-        <div class="Wordpress circle bubble_neuf">Wordpress</div>
-        <div class="MySQL circle bubble_dix">MySQL</div>
-         <div class="Behat circle bubble_eleven">Behat</div>
-        <div class="Github circle bubble_twelve">Github</div>
-         <div class="Less circle">Less</div>
+        <div class="JS bubble rond a">JS</div>
+     <div class="PHP rond b">PHP</div>
+        <div class="Ruby rond c">Ruby</div>
+        <div class="HTML rond d">HTML5</div>
+        <div class="CSS rond e">CSS3</div>
+        <div class="Git rond f">Git</div>
+        <div class="JQuery rond g">JQuery</div>
+        <div class="Symfony rond  h">Symfony</div>
+        <div class="Bootstrap rond  i">Bootstrap</div>
+        <div class="Wordpress rond  j">Wordpress</div>
+        <div class="MySQL  rond k">MySQL</div>
+         <div class="Behat rond l">Behat</div>
+        <div class="Github rond m">Github</div>
+         <div class="Less rond n">Less</div>
     </div>
+</div>
 </div>
 </section>
 
